objects/BMCServiceDesk__BMC_Chassis__c.object
<CustomObject>
    <description>BMC_Chassis. CMDB Class that stores information about frames that serve as the structural support for a computer system&apos;s electronic components. It can include information about physical elements that enclose other elements and provide definable functionality, such as a desktop computer, a processing node, an uninterruptible power supply (UPS), disk or tape storage, or a combination of such elements. This class corresponds to the DMTF CIM_Chassis class.</description>
    <fields>
        <fullName>BMCServiceDesk__Chassis_Type__c</fullName>
        <label>Chassis Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Low-profile desktop</fullName>
                </value>
                <value>
                    <fullName>Pizza box</fullName>
                </value>
                <value>
                    <fullName>Mini tower</fullName>
                </value>
                <value>
                    <fullName>Tower</fullName>
                </value>
                <value>
                    <fullName>Portable</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Hand-held</fullName>
                </value>
                <value>
                    <fullName>Docking Station</fullName>
                </value>
                <value>
                    <fullName>All-in-one</fullName>
                </value>
                <value>
                    <fullName>Subnotebook</fullName>
                </value>
                <value>
                    <fullName>Space-saving</fullName>
                </value>
                <value>
                    <fullName>Lunch box</fullName>
                </value>
                <value>
                    <fullName>Main system Chassis</fullName>
                </value>
                <value>
                    <fullName>Expansion Chassis</fullName>
                </value>
                <value>
                    <fullName>Subchassis</fullName>
                </value>
                <value>
                    <fullName>Bus-expansion Chassis</fullName>
                </value>
                <value>
                    <fullName>Peripheral Chassis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Power_Cords__c</fullName>
        <label>Number of Power Cords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rack_Mountable__c</fullName>
        <label>Rack Mountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Chassis</label>
    <nameField>
        <label>Chassis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chassis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>